--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script> -->
-<!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
-<script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script> -->
+  <!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>  -->
+  <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
+  <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
 </head>
 <body>
   <app-root></app-root>
