--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
