--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,25 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Voila</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>  -->
-  <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
+<head>
+    <meta charset="utf-8">
+    <title>Voila</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>  -->
+    <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
+
 </html>
