msgs and guide sidenav

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
     <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@300&family=Neuton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Neuton&display=swap" rel="stylesheet">
 </head>
 
 <body>
