--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,25 @@
 </head>
 
 <body>
-    <app-root></app-root>
+    <app-root>
+      <div class="container11">
+        <div class="box11">
+
+            <div class="title11">
+                <span class="block11"></span>
+                <h1>Voila<span></span></h1>
+            </div>
+
+            <div class="role11">
+                <div class="block11"></div>
+                <p>Find the perfet
+                   <del>Guide</del>
+                   Partner</p>
+            </div>
+
+        </div>
+    </div>
+    </app-root>
 </body>
 
 </html>
