navigation images and lot more

--- a/src/index.html
+++ b/src/index.html
@@ -23,23 +23,52 @@
 
 <body>
     <app-root>
-      <div class="container11">
-        <div class="box11">
 
-            <div class="title11">
-                <span class="block11"></span>
-                <h1>Voila<span></span></h1>
-            </div>
-
-            <div class="role11">
-                <div class="block11"></div>
-                <p>Find the perfet
-                   <del>Guide</del>
-                   Partner</p>
-            </div>
-
-        </div>
-    </div>
+<!-- Please typing your favorite word!-->
+<div class="bg101">
+<div class="first101" id="ui">
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+  <div class="text">Voila</div>
+</div>
+</div>
     </app-root>
 </body>
 
