--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <base href="/">
 <style>
   .bg101 {
-  background: #140505;
+  background: #ffffff;
   height: 100vh;
   overflow: hidden;
   display: -webkit-box;
@@ -5399,12 +5399,12 @@
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Neuton&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Playfair+Display&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&family=Neuton&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
