--- a/src/index.html
+++ b/src/index.html
@@ -5394,6 +5394,8 @@
 </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="./assets/images/V.png">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
     <!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>  -->
     <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
   <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
